blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1 # Number of pods we want to create running a specific image
  selector: # which pods this Deployment will manage
    matchLabels:
      app: client
  template: # the configurations for each pod this Deployment is going to create
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: cqtan/client
--- # chain the creation of multiple Resource Objects with this
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP # can be left out as this is the default
  selector:
    app: client # Find all Pods matching "app: client"
  ports:
    - name: client
      protocol: TCP
      port: 3000 # typically identical to port number of targetPort
      targetPort: 3000 # Pod port
