blog/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1 # Number of pods we want to create running a specific image
  selector: # which pods this Deployment will manage
    matchLabels:
      app: moderation
  template: # the configurations for each pod this Deployment is going to create
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: cqtan/moderation
--- # chain the creation of multiple Resource Objects with this
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP # can be left out as this is the default
  selector:
    app: moderation # Find all Pods matching "app: moderation"
  ports:
    - name: moderation
      protocol: TCP
      port: 4003 # typically identical to port number of targetPort
      targetPort: 4003 # Pod port
