blog/infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts # Find all Pods matching "app: posts"
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # typically identical to port number of targetPort
      targetPort: 4000 # Pod port
